--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.268.0",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
     "react-countup": "^6.4.2",
