--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "flutterwave-react-v3": "^1.3.0",
     "lucide-react": "^0.268.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
