--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^6.4.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-paystack": "^5.0.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "sass": "^1.66.1",
