--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
+    "react-component-export-image": "^1.0.6",
     "react-countup": "^6.4.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
