--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "country-state-city": "^3.2.1",
+    "countryjs": "^1.8.0",
     "date-fns": "^2.30.0",
     "flutterwave-react-v3": "^1.3.0",
     "lucide-react": "^0.268.0",
