--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "countryjs": "^1.8.0",
     "date-fns": "^2.30.0",
     "flutterwave-react-v3": "^1.3.0",
+    "framer-motion": "^11.3.19",
     "lucide-react": "^0.268.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
